name:                renderVRS
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/leohaskell/renderVRS#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Taskoff
maintainer:          daniel.taskoff@gmail.com
copyright:           2016 Daniel Taskoff
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable renderVRS
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , GLUT >= 2.7.0.6  && < 2.7.1
                     , parseVRS >= 0.1.0.0 && < 0.2.0.0
                     , unordered-containers >= 0.2.5.1 && < 0.2.6
                     , array >= 0.5.1.0  && < 0.5.2

  ghc-options:         -Wall -fwarn-tabs -O2
